package com.example.wordtest;


public class DataHolder {
    public static int count;
    public static String category;
}
