@startuml

title __WORDTEST's Class Diagram__\n

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.DataHolder {
      }
    }
  }
  

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.EditSceneController {
      }
    }
  }
  

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.TestingSceneController {
      }
    }
  }
  

  namespace  {
    namespace om.example.wordtest {
      class com.example.wordtest.Word {
      }
    }
  }
  

  com.example.wordtest.EditSceneController .up.|> javafx.fxml.Initializable
  com.example.wordtest.HelloApplication -up-|> javafx.application.Application
  com.example.wordtest.HelloController .up.|> javafx.fxml.Initializable
  com.example.wordtest.HelloController o-- com.example.wordtest.EditSceneController : editSceneController
  com.example.wordtest.TestingSceneController .up.|> javafx.fxml.Initializable
  com.example.wordtest.TestingSceneController o-- com.example.wordtest.EditSceneController : EditSceneController
  com.example.wordtest.TestingSceneController o-- com.example.wordtest.HelloController : HelloController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
